[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfs_functions"
version = "2.0.0"
authors = [
  { name="Santiago Toso", email="santiagoa.toso@gmail.com" },
]
description = "Package to easily wrangle GTFS files geospatially."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pandas', 'geopandas',
    'shapely', 'utm', 'numpy',
    'pendulum',
    'branca',
    'plotly', 'jenkspy', 'folium',
    'unicode'
]

[project.urls]
"Homepage" = "https://github.com/Bondify/gtfs_functions/tree/master"
"Bug Tracker" = "https://github.com/Bondify/gtfs_functions/issues"
