[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtfs-functions"
version = "2.1"
authors = [
  { name="Santiago Toso", email="santiagoa.toso@gmail.com" },
]
description = "Package to easily wrangle GTFS files geospatially."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas", 
    "geopandas",
    "shapely", "utm>=0.7.0", 
    #"numpy>=1.24.2",
    'numpy',
    "pendulum>=2.0.0",
    "branca>=0.6.0",
    "plotly>=5.13.0", "jenkspy>=0.3.2", "folium>=0.14.0",
    "unicode>=2.9"
]

[project.urls]
"Homepage" = "https://github.com/Bondify/gtfs_functions/tree/master"
"Bug Tracker" = "https://github.com/Bondify/gtfs_functions/issues"
