[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
filter_files = true
skip = ".venv,.mypy_cache"

[tool.black]
line-length = 120
exclude = "(\\.git|\\.mypy_cache|\\.venv|_build|buck-out|build|dist)"