[metadata]
version = 2.7.0

[flake8]
select = B,B9,C,DAR,E,F,N,RST,S,W
extend-ignore = E704,W503,E203,C901
max-line-length = 120
max-complexity = 10
docstring-convention = google
per-file-ignores = tests/*:S101
rst-roles = class,const,func,meth,mod,ref
rst-directives = deprecated
exclude = 
	notebooks
	./notebooks
	notebooks/*
	./notebooks/*
	.venv
	gtfs_functions/__init__.py
	data/*

